--- a/evaluation/style.css
+++ b/evaluation/style.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 600px;
-  margin: 0 auto;
+  margin: 80px auto 10px;
 }
 
 .form-group {
